--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -41,6 +42,9 @@ dependencies {
     implementation "androidx.room:room-runtime:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
+
+    //firebase
+    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.4'
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
