add fragments nav

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,12 @@ dependencies {
     //room
     implementation "androidx.room:room-runtime:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:2.3.0"
+
+    //fragments
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     //firebase
     implementation 'com.google.firebase:firebase-firestore-ktx:23.0.4'
